--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,20 @@
+.nav {
+  background-color: rgb(178, 231, 231);
+}
+.nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+.nav ul li {
+  margin: 20px;
+  padding: 5px;
+  background-color: rgb(140, 236, 236);
+  border: 1px solid rgb(17, 49, 53);
+  border-radius: 4px;
+}
+
 .main {
   display: flex;
   flex-direction: column;
