--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,6 +13,7 @@
   background-color: rgb(140, 236, 236);
   border: 1px solid rgb(17, 49, 53);
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .main {
